test/typecheck/errors/cout.boa
data: output collection of string;

# C++ users might try to chain the emits, like with iostreams
data << input.name << input.id; # error
